# E2Lotery

./: CMakeLists.txt
E2Llotery/: CMakeLists.txt  E2Lotery.cpp  main.cpp
E2Llotery/Assets/: E2Llotery.qrc
E2Llotery/Assets/QML/: main.qml
E2Llotery/include/: E2Lotery.h
